uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-k8s
  namespace: uptime-kuma
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: up.helo-k8s.fun
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: uptime-kuma
            port:
              number: 3001
